mType/tests/testFiles/import/error/diamondConflict/ModC.mt
public class Widget {
    public function id(): string {
        return "C";
    }
}
